--- a/captured_dreams.html
+++ b/captured_dreams.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ons Team | Joren</title>
+    <title>Portfolio | Captured Dreams</title>
 
     <!-- OTHER IMPORTANT SEO TAGS -->
     <meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten MMP willen graag hun kennis delen met jou!">
@@ -47,84 +47,64 @@
 
     <div class="grid__wrapper">
         <div class="wraplogo_2 wraplogo">
-            <h1> JOREN </h1>
+            <h1> CAPTURED DREAMS </h1>
             <img class="logo kleiner_logo" src="assets/logo.png" alt="logo">
         </div>
     </div>
 
-    <!-- persoonlijke_gegevens -->
+    <!-- fotobalk -->
 
     <div class="grid__container">
 
         <div class="grid__row">
-            <div class="grid__column-3 grid__offset-2">
-                <img class="standaard_foto" src="assets/joren.png" alt="joren"> </div>
-            <div class="grid__column-2">
-                <h2 class="algemene_gegevens">
-                    Naam
-                    <br>Leeftijd
-                    <br>Woonplaats
-                    <br>Funtcie
-                    <br>Opleiding(en)
-                </h2>
-            </div>
-            <div class="grid__column-3 algemene_gegevens_2">
-                <p>Verneert Joren
-                    <br>18 jaar
-                    <br>Schellebelle
-                    <br>Grafisch vormgever
-                    <br>Grafische & Digitale Media, Arteveldehogeschool
-                </p>
+            <div class="grid__row blauw_vlak blauw_vlak">
+                <div class="grid__column-4 grid__offset-2">
+                    <img class="standaard_foto portfolio_foto" src="assets/cd_2.png" alt="captured dreams logo wit">
+                </div>
+                <div class="grid__column-4">
+                    <img class="standaard_foto portfolio_foto" src="assets/cd_1.png" alt="captured dreams logo zwart">
+                </div>
             </div>
         </div>
 
         <div class="grid__row">
             <div class="grid__column-6 grid__offset-2">
-                <h2 class="algemene_gegevens">
-                    Iets meer over mezelf
-                </h2>
-                <p>Ik wist dat ik grafisch vormgever wou worden wanneer ik elke ‘Logo Quiz’ app had uitgespeeld. Naast dat had
-                    ik al een 12-jarige opleiding achter de rug in de kunstacademie te Wetteren. Naast de passie voor mijn
-                    werk heb ik ook nog een passie voor Mexicaans eten, of gewoon eten in het algemeen.
+                <h3>Iets meer over dit project</h3>
+                <p> Captured Dreams is de pagina van een amateurfotografe. Haar werk varieert van communiefoto’s tot dierenfoto’s.
+                    Het logo is rond opgebouwd met het idee van een soort lens te recreëren.
                 </p>
             </div>
         </div>
 
-        <div class="grid__row blauw_vlak blauw_vlak-2">
-            <div class="grid__column-8 grid__offset-2">
-                <h2>Een quote die mij inspireert</h2>
-                <p class="quote_tekst">
-                    “TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST ”
-                </p>
-            </div>
-        </div>
     </div>
 
-<!-- footer -->
-	<footer>
-		<div class="grid-wrapper footer-wrapper">
-			<div class="grid__container">
-				<div class="grid__row">
-					<div class="grid__column-5 text-footer">
-						Joren Verneert © 2017
-					</div>
-					<div class="grid__column-4">
-						<a href="https://www.facebook.com/verneert.j">
-							<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-						</a>
-						<a href="https://www.instagram.com/joren.verneert/">
-							<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-						</a>
-					</div>
-					<div class="grid__column-3 text-footer adres_footer">
-						WE ARE THE SAME
-						<br>Heuvel 32
-						<br>9260 Schellebelle
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+
+    <!-- footer -->
+    <footer>
+        <div class="grid-wrapper footer-wrapper">
+            <div class="grid__container">
+                <div class="grid__row">
+                    <div class="grid__column-5 text-footer">
+                        Joren Verneert © 2017
+                    </div>
+                    <div class="grid__column-4">
+                        <a href="https://www.facebook.com/verneert.j">
+                            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.instagram.com/joren.verneert/">
+                            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="grid__column-3 text-footer adres_footer">
+                        WE ARE THE SAME
+                        <br>Heuvel 32
+                        <br>9260 Schellebelle
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
+
 </html>
