--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" media="all" href="css/grid.css" />
 	<link rel="stylesheet" media="all" href="css/nav.css" />
 	<link rel="stylesheet" media="all" href="css/base.css" />
+	<link rel="stylesheet" media="all" href="css/fonts/font-awesome.css" type='text/css' />
 </head>
 
 <body class="_grid__development">
@@ -96,4 +97,31 @@
 
 	</div>
 
+	<!-- footer -->
+	<footer>
+		<div class="grid-wrapper footer-wrapper">
+			<div class="grid__container">
+				<div class="grid__row">
+					<div class="grid__column-5 text-footer">
+						Joren Verneert © 2017
+					</div>
+					<div class="grid__column-4">
+						<a href="https://www.facebook.com/verneert.j">
+							<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+						</a>
+						<a href="https://www.instagram.com/joren.verneert/">
+							<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+						</a>
+					</div>
+					<div class="grid__column-3 text-footer adres_footer">
+						WE ARE THE SAME
+						<br>Heuvel 32
+						<br>9260 Schellebelle
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
 </body>
+</html>
