--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" media="all" href="css/grid.css" />
 	<link rel="stylesheet" media="all" href="css/nav.css" />
 	<link rel="stylesheet" media="all" href="css/base.css" />
-	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
+	<link rel="stylesheet" media="all" href="css/fonts/font-awesome.css" type='text/css' />
 </head>
 
 
@@ -60,44 +60,52 @@
 
 				<div class="grid__column-3 grid__offset-1">
 					<h2>WAT ZIJN WE?</h2>
-					We zijn een grafisch bureau gevestigd in het hartje van Schellebelle. WE ARE THE SAME bestaat uit een groep grafische ontwerpers
-					en webdesigners die hun werk elke dag met passie uitvoeren.
+					<p>We zijn een grafisch bureau gevestigd in het hartje van Schellebelle. WE ARE THE SAME bestaat uit een groep grafische
+						ontwerpers en webdesigners die hun werk elke dag met passie uitvoeren.
+					</p>
 				</div>
 				<div class="grid__column-4">
 					<h2>WAT DOEN WE?</h2>
-					Ons werk is zeer uiteenlopend. Alles wat er zich in de grafische wereld afspeelt, kunnen wij bereiken. We maken websites,
-					we geven boeken, formulieren, uitnodigingen, zelfs het kleinste drukwerk die juiste vormgeving zodat uw product (nog
-					meer) aantrekkelijk wordt.
+					<p>Ons werk is zeer uiteenlopend. Alles wat er zich in de grafische wereld afspeelt, kunnen wij bereiken. We maken websites,
+						we geven boeken, formulieren, uitnodigingen, zelfs het kleinste drukwerk die juiste vormgeving zodat uw product (nog
+						meer) aantrekkelijk wordt.
+					</p>
 				</div>
 				<div class="grid__column-3">
 					<h2>WAAROM WATS?</h2>
-					We zijn een jong, creatief bruisend bureau met zeer veel passie voor ons vak. We gaan graag uitdagingen aan en geven niet
-					snel op, bij WE ARE THE SAME zit je goed!
+					<p>We zijn een jong, creatief bruisend bureau met zeer veel passie voor ons vak. We gaan graag uitdagingen aan en geven
+						niet snel op, bij WE ARE THE SAME zit je goed!
+					</p>
 				</div>
 			</div>
 			<div class="grid__row">
 				<div class="grid__column-3 grid__offset-1">
 					<h3>HOE ZIET ONZE TOEKOMST ER UIT?</h3>
-					Ook al is dit bureau (nog) niet het grootste in België, onze klantendatabase wordt wekelijks groter.
+					<p> al is dit bureau (nog) niet het grootste in België, onze klantendatabase wordt wekelijks groter.
+					</p>
 				</div>
 				<div class="grid__column-4">
 					<h3>HOE ZIJN WE TOT STAND GEKOMEN?</h3>
-					Alle teamleden hebben elkaar ontmoet op de campus Grafische & Digitale Media op Arteveldehogeschool. Dit bureau is een uitdehandgelopen
-					groepswerk waar alle leden teamlid van waren. Omdat het groepsgevoel zo goed zat, zijn we verder gegaan met elkaar na
-					ons diploma. </div>
+					<p>Alle teamleden hebben elkaar ontmoet op de campus Grafische & Digitale Media op Arteveldehogeschool. Dit bureau is een
+						uitdehandgelopen groepswerk waar alle leden teamlid van waren. Omdat het groepsgevoel zo goed zat, zijn we verder gegaan
+						met elkaar na ons diploma.
+					</p>
+				</div>
 				<div class="grid__column-3">
 					<h3>WAT IS JOUW TOEKOMST MET WATS?</h3>
-					Wanneer u ons contacteerd kunnen we altijd samenzitten om eventuele projecten te bespreken.
+					<p>Wanneer u ons contacteerd kunnen we altijd samenzitten om eventuele projecten te bespreken.
+					</p>
 				</div>
 
 			</div>
 			<div class="grid__row">
 				<div class="grid__column-7 grid__offset-1">
 					<h3>NAAMVERKLARING</h3>
-					Letterlijk vertaald: WE ZIJN HETZELFDE. Dit heeft goede redenen. De eerste reden is puur toevallig, maar we lijken allemaal
-					op elkaar, waardoor velen denken dat we een familieband hebben, wat niet zo is. De tweede reden gaat vooral over hoe
-					we denken. Wij als grafische vormgevers kijken en denken op een andere manier naar veel dingen. Ook al hebben we onze
-					verschillen, na een sessie brainstormen komt er altijd een geweldig idee.
+					<p>Letterlijk vertaald: WE ZIJN HETZELFDE. Dit heeft goede redenen. De eerste reden is puur toevallig, maar we lijken allemaal
+						op elkaar, waardoor velen denken dat we een familieband hebben, wat niet zo is. De tweede reden gaat vooral over hoe
+						we denken. Wij als grafische vormgevers kijken en denken op een andere manier naar veel dingen. Ook al hebben we onze
+						verschillen, na een sessie brainstormen komt er altijd een geweldig idee.
+					</p>
 				</div>
 				<div class="grid__column-3">
 					<img class="werkplek" src="assets/werkplek.png" alt="werkplek">
@@ -134,7 +142,7 @@
 			</div>
 		</div>
 	</footer>
-	
+
 </body>
 
 </html>
