--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" media="all" href="css/grid.css" />
 	<link rel="stylesheet" media="all" href="css/nav.css" />
 	<link rel="stylesheet" media="all" href="css/base.css" />
-	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
+	<link rel="stylesheet" media="all" href="css/fonts/font-awesome.css" type='text/css' />
 </head>
 
 <body class="_grid__development">
@@ -57,28 +57,34 @@
 	<div class="grid__container">
 		<div class="grid__row">
 			<div class="grid__column-3 grid__offset-1">
-				<div class="portfolio_wraper">
-					<div class="overlayer">
-						<h4>februari 2017</h4>
+				<a href="eureka.html">
+					<div class="portfolio_wraper">
+						<div class="overlayer">
+							<h4>februari 2017</h4>
+						</div>
+						<img class="standaard_foto" src="assets/steekkaarten.png" alt="steekkaarten eureka">
 					</div>
-					<img class="standaard_foto" src="assets/steekkaarten.png" alt="steekkaarten eureka">
-				</div>
+				</a>
 			</div>
 			<div class="grid__column-4">
-				<div class="portfolio_wraper">
-					<div class="overlayer">
-						<h4>maart 2017</h4>
+				<a href="vespa.html">
+					<div class="portfolio_wraper">
+						<div class="overlayer">
+							<h4>maart 2017</h4>
+						</div>
+						<img class="standaard_foto" src="assets/vespa.png" alt="technische fischa vespa 125gtr">
 					</div>
-					<img class="standaard_foto" src="assets/vespa.png" alt="technische fischa vespa 125gtr">
-				</div>
+				</a>
 			</div>
 			<div class="grid__column-3">
-				<div class="portfolio_wraper">
-					<div class="overlayer">
-						<h4>januari 2017</h4>
+				<a href="captured_dreams.html">
+					<div class="portfolio_wraper">
+						<div class="overlayer">
+							<h4>januari 2017</h4>
+						</div>
+						<img class="standaard_foto" src="assets/cd.png" alt="captured dreams">
 					</div>
-					<img class="standaard_foto" src="assets/cd.png" alt="captured dreams">
-				</div>
+				</a>
 			</div>
 		</div>
 		<div class="grid__row">
@@ -113,15 +119,15 @@
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
-					<img class="standaard_foto" src="assets/memory.png" alt="memry spel zeedieren">
+					<img class="standaard_foto" src="assets/memory.png" alt="memory spel zeedieren">
 				</div>
 			</div>
 			<div class="grid__column-4">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
-						<h4>maart 2017</h4>
+						<h4>mei 2017</h4>
 					</div>
-					<img class="standaard_foto" src="assets/devaddere.png" alt="devaddere boekhouding">
+					<img class="standaard_foto" src="assets/breda_live.png" alt="boekje breda live">
 				</div>
 			</div>
 			<div class="grid__column-3">
@@ -142,6 +148,50 @@
 					<img class="standaard_foto" src="assets/elien_jonas.png" alt="kader cadeau">
 				</div>
 			</div>
+			<div class="grid__column-4">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>maart 2017</h4>
+					</div>
+					<img class="standaard_foto" src="assets/devaddere.png" alt="devaddere boekhouding">
+				</div>
+			</div>
+			<div class="grid__column-3">
+				<div class="portfolio_wraper">
+					<div class="overlayer">
+						<h4>december 2016</h4>
+					</div>
+					<img class="standaard_foto" src="assets/letterexplosie.png" alt="letterexplosie letter j">
+				</div>
+			</div>
 		</div>
 
+		<!-- footer -->
+		<footer>
+			<div class="grid-wrapper footer-wrapper">
+				<div class="grid__container">
+					<div class="grid__row">
+						<div class="grid__column-5 text-footer">
+							Joren Verneert © 2017
+						</div>
+						<div class="grid__column-4">
+							<a href="https://www.facebook.com/verneert.j">
+								<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+							</a>
+							<a href="https://www.instagram.com/joren.verneert/">
+								<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+							</a>
+						</div>
+						<div class="grid__column-3 text-footer adres_footer">
+							WE ARE THE SAME
+							<br>Heuvel 32
+							<br>9260 Schellebelle
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+
 </body>
+
+</html>
