--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" media="all" href="css/grid.css" />
 	<link rel="stylesheet" media="all" href="css/nav.css" />
 	<link rel="stylesheet" media="all" href="css/base.css" />
-	<link rel="stylesheet" media="all" href="css/font-awesome.css" type='text/css' />
+	<link rel="stylesheet" media="all" href="css/fonts/font-awesome.css" type='text/css' />
 </head>
 
 <body class="_grid__development">
@@ -93,14 +93,38 @@
 			</div>
 			<div class="grid__column-1 bovennamen"> Tonia </div>
 			<div class="grid__column-3 grid__offset-1">
-				<div class="portfolio_wraper">
-					<a href="contact.html">
-						<img class="standaard_foto" src="assets/blauw_vlak.png" alt="jamal"> Misschien word jij wel onze nieuwe aanwinst?
-					</a>
-				</div>
+				<a href="contact.html">
+					<img class="standaard_foto" src="assets/aanwinst.png" alt="misschien wordt jij wel onze nieuwe aanwinst?">
+				</a>
 			</div>
 		</div>
 
-
+		<!-- footer -->
+		<footer>
+			<div class="grid-wrapper footer-wrapper">
+				<div class="grid__container">
+					<div class="grid__row">
+						<div class="grid__column-5 text-footer">
+							Joren Verneert © 2017
+						</div>
+						<div class="grid__column-4">
+							<a href="https://www.facebook.com/verneert.j">
+								<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+							</a>
+							<a href="https://www.instagram.com/joren.verneert/">
+								<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+							</a>
+						</div>
+						<div class="grid__column-3 text-footer adres_footer">
+							WE ARE THE SAME
+							<br>Heuvel 32
+							<br>9260 Schellebelle
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 
 </body>
+
+</html>
