--- a/captured_dreams.html
+++ b/captured_dreams.html
@@ -55,7 +55,6 @@
     <!-- fotobalk -->
 
     <div class="grid__container">
-
         <div class="grid__row">
             <div class="grid__row blauw_vlak blauw_vlak">
                 <div class="grid__column-4 grid__offset-2">
@@ -75,35 +74,41 @@
                 </p>
             </div>
         </div>
-
     </div>
 
-
-    <!-- footer -->
-    <footer>
-        <div class="grid-wrapper footer-wrapper">
-            <div class="grid__container">
-                <div class="grid__row">
-                    <div class="grid__column-5 text-footer">
-                        Joren Verneert © 2017
-                    </div>
-                    <div class="grid__column-4">
-                        <a href="https://www.facebook.com/verneert.j">
-                            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-                        </a>
-                        <a href="https://www.instagram.com/joren.verneert/">
-                            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="grid__column-3 text-footer adres_footer">
-                        WE ARE THE SAME
-                        <br>Heuvel 32
-                        <br>9260 Schellebelle
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+<!-- footer -->
+	<footer>
+		<div class="grid-wrapper footer-wrapper">
+			<div class="grid__container">
+				<div class="grid__row">
+					<div class="grid__column-5 text-footer">
+						Joren Verneert © 2017
+						<br>
+						<a href="disclaimer.html">
+						Disclaimer
+						</a>
+                        <br>
+						<a href="guide.html">
+						Style Guide
+						</a>
+					</div>
+					<div class="grid__column-4">
+						<a href="https://www.facebook.com/verneert.j">
+							<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+						</a>
+						<a href="https://www.instagram.com/joren.verneert/">
+							<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+						</a>
+					</div>
+					<div class="grid__column-3 text-footer adres_footer">
+						WE ARE THE SAME
+						<br>Heuvel 32
+						<br>9260 Schellebelle
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 </body>
 
