--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
 				<div class="grid__row">
 					<div class="grid__column-5 text-footer">
 						Joren Verneert © 2017
+						<br>
+						<a href="disclaimer.html">
+						Disclaimer
+						</a>
+						<br>
+						<a href="guide.html">
+						Style Guide
+						</a>
 					</div>
 					<div class="grid__column-4">
 						<a href="https://www.facebook.com/verneert.j">
