--- a/joren.html
+++ b/joren.html
@@ -94,19 +94,27 @@
             <div class="grid__column-8 grid__offset-2">
                 <h2>Een quote die mij inspireert</h2>
                 <p class="quote_tekst">
-                    “TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST ”
+                    “GRAB THE MONET AND LET’S GOGH”
                 </p>
             </div>
         </div>
     </div>
 
-<!-- footer -->
+    <!-- footer -->
 	<footer>
 		<div class="grid-wrapper footer-wrapper">
 			<div class="grid__container">
 				<div class="grid__row">
 					<div class="grid__column-5 text-footer">
 						Joren Verneert © 2017
+						<br>
+						<a href="disclaimer.html">
+						Disclaimer
+						</a>
+                        <br>
+						<a href="guide.html">
+						Style Guide
+						</a>
 					</div>
 					<div class="grid__column-4">
 						<a href="https://www.facebook.com/verneert.j">
