--- a/portfolio.html
+++ b/portfolio.html
@@ -89,80 +89,98 @@
 		</div>
 		<div class="grid__row">
 			<div class="grid__column-3 grid__offset-1">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
 					<img class="standaard_foto" src="assets/kleurlandschap.png" alt="kleurenlandschap aquarel">
 				</div>
+				</a>
 			</div>
 			<div class="grid__column-4">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
 					<img class="standaard_foto" src="assets/rhea_macbook.png" alt="youtubekanaal rhea vermei">
 				</div>
+				</a>
 			</div>
 			<div class="grid__column-3">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>maart 2017</h4>
 					</div>
 					<img class="standaard_foto" src="assets/uitnodiging_50.png" alt="Uitnodiging 5O jaar Filip">
 				</div>
+				</a>
 			</div>
 		</div>
 		<div class="grid__row">
 			<div class="grid__column-3 grid__offset-1">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
 					<img class="standaard_foto" src="assets/memory.png" alt="memory spel zeedieren">
 				</div>
+				<a href="eureka.html">
 			</div>
 			<div class="grid__column-4">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>mei 2017</h4>
 					</div>
 					<img class="standaard_foto" src="assets/breda_live.png" alt="boekje breda live">
 				</div>
+				<a href="eureka.html">
 			</div>
 			<div class="grid__column-3">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>april 2017</h4>
 					</div>
 					<img class="standaard_foto" src="assets/z-w_landschap.png" alt="zwart-wit landschap aquarel">
 				</div>
+				<a href="eureka.html">
 			</div>
 		</div>
 		<div class="grid__row">
 			<div class="grid__column-3 grid__offset-1">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>maart 2017</h4>
 					</div>
 					<img class="standaard_foto" src="assets/elien_jonas.png" alt="kader cadeau">
 				</div>
+				<a href="eureka.html">
 			</div>
 			<div class="grid__column-4">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>maart 2017</h4>
 					</div>
 					<img class="standaard_foto" src="assets/devaddere.png" alt="devaddere boekhouding">
 				</div>
+				<a href="eureka.html">
 			</div>
 			<div class="grid__column-3">
+				<a href="eureka.html">
 				<div class="portfolio_wraper">
 					<div class="overlayer">
 						<h4>december 2016</h4>
 					</div>
 					<img class="standaard_foto" src="assets/letterexplosie.png" alt="letterexplosie letter j">
 				</div>
+				<a href="eureka.html">
 			</div>
 		</div>
 
