--- a/tonia.html
+++ b/tonia.html
@@ -84,9 +84,8 @@
                     Iets meer over mezelf
                 </h2>
                 <p>
-                    Iets meer over mezelf Ik probeer altijd mee te zijn met de laatste trend, ook al moet ik zeggen dat ze da laatste jaren uit
-                    de hand aan het lopen zijn. Ik ben een gewoon simpel meisje uit Serskamp met een grote liefde voor de
-                    grafische wereld.
+                    Ik probeer altijd mee te zijn met de laatste trend, ook al moet ik zeggen dat ze da laatste jaren uit de hand aan het lopen
+                    zijn. Ik ben een gewoon simpel meisje uit Serskamp met een grote liefde voor de grafische wereld.
                 </p>
             </div>
         </div>
@@ -104,38 +103,38 @@
 
 
     <!-- footer -->
-	<footer>
-		<div class="grid-wrapper footer-wrapper">
-			<div class="grid__container">
-				<div class="grid__row">
-					<div class="grid__column-5 text-footer">
-						Joren Verneert © 2017
-						<br>
-						<a href="disclaimer.html">
+    <footer>
+        <div class="grid-wrapper footer-wrapper">
+            <div class="grid__container">
+                <div class="grid__row">
+                    <div class="grid__column-5 text-footer">
+                        Joren Verneert © 2017
+                        <br>
+                        <a href="disclaimer.html">
 						Disclaimer
 						</a>
                         <br>
-						<a href="guide.html">
+                        <a href="guide.html">
 						Style Guide
 						</a>
-					</div>
-					<div class="grid__column-4">
-						<a href="https://www.facebook.com/verneert.j">
-							<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-						</a>
-						<a href="https://www.instagram.com/joren.verneert/">
-							<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
-						</a>
-					</div>
-					<div class="grid__column-3 text-footer adres_footer">
-						WE ARE THE SAME
-						<br>Heuvel 32
-						<br>9260 Schellebelle
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+                    </div>
+                    <div class="grid__column-4">
+                        <a href="https://www.facebook.com/verneert.j">
+                            <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.instagram.com/joren.verneert/">
+                            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="grid__column-3 text-footer adres_footer">
+                        WE ARE THE SAME
+                        <br>Heuvel 32
+                        <br>9260 Schellebelle
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
