--- a/captured_dreams.html
+++ b/captured_dreams.html
@@ -70,7 +70,7 @@
             <div class="grid__column-6 grid__offset-2">
                 <h3>Iets meer over dit project</h3>
                 <p> Captured Dreams is de pagina van een amateurfotografe. Haar werk varieert van communiefoto’s tot dierenfoto’s.
-                    Het logo is rond opgebouwd met het idee van een soort lens te recreëren.
+                    Het logo is rond opgebouwd met het idee van een soort lens te creëren.
                 </p>
             </div>
         </div>
