--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				</div>
 				<div class="grid__column-3">
 					<h3>WAT IS JOUW TOEKOMST MET WATS?</h3>
-					<p>Wanneer u ons contacteerd kunnen we altijd samenzitten om eventuele projecten te bespreken.
+					<p>Wanneer u ons contacteert kunnen we altijd samenzitten om eventuele projecten te bespreken.
 					</p>
 				</div>
 
