--- a/joren.html
+++ b/joren.html
@@ -64,13 +64,13 @@
                     Naam
                     <br>Leeftijd
                     <br>Woonplaats
-                    <br>Funtcie
+                    <br>Functie
                     <br>Opleiding(en)
                 </h2>
             </div>
             <div class="grid__column-3 algemene_gegevens_2">
                 <p>Verneert Joren
-                    <br>18 jaar
+                    <br>19 jaar
                     <br>Schellebelle
                     <br>Grafisch vormgever
                     <br>Grafische & Digitale Media, Arteveldehogeschool
@@ -83,7 +83,7 @@
                 <h2 class="algemene_gegevens">
                     Iets meer over mezelf
                 </h2>
-                <p>Ik wist dat ik grafisch vormgever wou worden wanneer ik elke ‘Logo Quiz’ app had uitgespeeld. Naast dat had
+                <p>Ik wist dat ik grafisch vormgever wou worden wanneer ik elke ‘Logo Quiz’ app had uitgespeeld. Daarbij dat had
                     ik al een 12-jarige opleiding achter de rug in de kunstacademie te Wetteren. Naast de passie voor mijn
                     werk heb ik ook nog een passie voor Mexicaans eten, of gewoon eten in het algemeen.
                 </p>
