--- a/jamal.html
+++ b/jamal.html
@@ -64,7 +64,7 @@
                     Naam
                     <br>Leeftijd
                     <br>Woonplaats
-                    <br>Funtcie
+                    <br>Functie
                     <br>Opleiding(en)
                 </h2>
             </div>
