--- a/tonia.html
+++ b/tonia.html
@@ -64,7 +64,7 @@
                     Naam
                     <br>Leeftijd
                     <br>Woonplaats
-                    <br>Funtcie
+                    <br>Functie
                     <br>Opleiding(en)
                 </h2>
             </div>
@@ -84,7 +84,7 @@
                     Iets meer over mezelf
                 </h2>
                 <p>
-                    Ik probeer altijd mee te zijn met de laatste trend, ook al moet ik zeggen dat ze da laatste jaren uit de hand aan het lopen
+                    Ik probeer altijd mee te zijn met de laatste trends, ook al moet ik zeggen dat ze da laatste jaren uit de hand aan het lopen
                     zijn. Ik ben een gewoon simpel meisje uit Serskamp met een grote liefde voor de grafische wereld.
                 </p>
             </div>
